@@ -1,19 +1,0 @@
-IO provides a simple mechanism to load several of the IO modules
-in one go. The IO modules belonging to the core are:
-
-      IO::Handle
-      IO::Seekable
-      IO::File
-      IO::Pipe
-      IO::Socket
-      IO::Dir
-      IO::Select
-      IO::Poll
-
-Note that these modules should be loaded via
-
-      use IO qw(Handle File); # etc.
-
-and not via the deprecated method
-
-      use IO;  # DEPRECATED
